Bætt loksins við highlight í admin

--- a/Areas/Identity/Pages/Account/Admin/Boardmember/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Boardmember/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    ViewData["ActivePage"] = "BoardMembers";
      Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
 
