--- a/Areas/Identity/Pages/Account/Admin/Events/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Index.cshtml
@@ -2,7 +2,8 @@
 @model webApi.Pages.Events.IndexModelEvent
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Events";
+    ViewData["ActivePage"] = "Events";
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
 
