--- a/Areas/Identity/Pages/Account/Admin/Grants/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Grants/Index.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    ViewData["ActivePage"] = "Grants";
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
 
