--- a/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
@@ -8,7 +8,7 @@
     <li class="@ManageAdminPages.ManageUsersNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/ManageUsers">Manage Users</a></li>
     <li class="@ManageAdminPages.ManageEventsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Events/Index">Edit Events</a></li>
     <li class="@ManageAdminPages.ManageGrantsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Grants/Index">Edit News</a></li>
-    <li class="@ManageAdminPages.ManageGrantsNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a></li>
+    <li class="@ManageAdminPages.ManageBoardMembersNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a></li>
     <li class="@ManageAdminPages.ManageVotesNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Votes/Index">Elections</a></li>
 
 </ul>
