layout í home area komið á rétta leið

--- a/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/_AdminNav.cshtml
@@ -12,3 +12,12 @@
     <li class="@ManageAdminPages.ManageVotesNavClass(ViewContext)"><a id="change-password" href="/Identity/Account/Admin/Votes/Index">Elections</a></li>
 
 </ul>
+<style>
+    .list_custom{
+        color:black;
+       list-style:none;
+    }
+    a{
+        color:black;
+    }
+</style>
