--- a/Pages/Shared/_Carousel.cshtml
+++ b/Pages/Shared/_Carousel.cshtml
@@ -10,17 +10,17 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="~/images/banner2.svg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                <img src="~/images/carousel/eaba-profiler1.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block" style="background: black; opacity: 0.8;filter: alpha(opacity=30);">
+                    <h5>Welcome to EABA, a central hub to share resources</h5>
+                    <p>joining up behaviour analysis across europe</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="~/images/banner1.svg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <img src="~/images/carousel/eaba-profiler2.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block" style="background: black; opacity: 0.8;filter: alpha(opacity=30);">
+                    <h5>Study behaviour analysis in European opportunity to be inspired and share ideas</h5>
+                    <p>an opportunity to be inspired and share ideas</p>
                 </div>
             </div>
         </div>
