bætt við local pdf skjölum

--- a/Pages/constitution.cshtml
+++ b/Pages/constitution.cshtml
@@ -36,7 +36,7 @@
             <p>All full members of EABA have voting rights. Voting is organised by the Secretary and is conducted either by show of hands (for a public meeting) or electronically (via this website).</p>
             <h3>Finances</h3>
                 <p>Annually a budget is presented by the Treasurer to be approved by the Committee at the AGM. Each member (or member association) pays EABA an annual fee determined by the Committee.</p>
-                <p>If you want to learn more about the regulation of EABA you can <a href="http://www.europeanaba.org/assets/Bylaws/EABA-By-Laws-Amended2018.pdf">download the bylaws.</a></p>
+                <p>If you want to learn more about the regulation of EABA you can <a href="./assets/EABA-By-Laws-Amended2018.pdf" target="_blank">download the bylaws.</a></p>
             <h3>Affiliated Chapters</h3>
                 <p>There are currently seven affiliated chapters of EABA:</p>
                 <ul>
