--- a/Areas/Identity/Pages/Account/Admin/Events/Edit.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Edit.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
+   // Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 
 }
 
