--- a/Areas/Identity/Pages/Account/Admin/ManageUsers.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/ManageUsers.cshtml
@@ -6,38 +6,61 @@
     // Til að nota eigið _Layout þarf að gefa því absolute path í Index.
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
-<h2>Manage users</h2>
-<table>
-    <tr>
-        <th>First name</th>
-        <th>Middle name</th>
-        <th>Last name</th>
-        <th>Address</th>
-        <th>City</th>
-        <th>Phone number</th>
-        <th>email</th>
-        <th>email Confirmed</th>
-        <th>registered</th>
-        <th>affiliation</th>
-        <th>Payment confirmed</th>
-    </tr>
-    @{ 
-        foreach(var item in Model.user)
-        {
-            <tr>
-                <td>@item.firstName</td>
-                <td>@item.middleName</td>
-                <td>@item.lastName</td>
-                <td>@item.address</td>
-                <td>@item.city</td>
-                <td>@item.PhoneNumber</td>
-                <td>@item.Email</td>
-                <td>@item.EmailConfirmed</td>
-                <td>vantar</td>
-                <td>@item.affiliation</td>
-                <td>vantar</td>
-            </tr>
-        }
-    }
-</table>
+<div class="container" id="containerLayout">
+
+    <h2>Manage your Admin account</h2>
+    <div>
+        <h4>Change your Admin settings</h4>
+        <hr />
+        <div class="row">
+            <div class="col-md-3">
+                <div class="list-group">                   
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
+                    <a class="list-group-item list-group-item-action active"href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Grants/Index">Edit News</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
+                </div>
+            </div>
+            <div class="col-md-9">
+
+                <h2>Manage users</h2>
+                <table>
+                    <tr>
+                        <th>First name</th>
+                        <th>Middle name</th>
+                        <th>Last name</th>
+                        <th>Address</th>
+                        <th>City</th>
+                        <th>Phone number</th>
+                        <th>email</th>
+                        <th>email Confirmed</th>
+                        <th>registered</th>
+                        <th>affiliation</th>
+                        <th>Payment confirmed</th>
+                    </tr>
+                    @{
+                        foreach (var item in Model.user)
+                        {
+                            <tr>
+                                <td>@item.firstName</td>
+                                <td>@item.middleName</td>
+                                <td>@item.lastName</td>
+                                <td>@item.address</td>
+                                <td>@item.city</td>
+                                <td>@item.PhoneNumber</td>
+                                <td>@item.Email</td>
+                                <td>@item.EmailConfirmed</td>
+                                <td>vantar</td>
+                                <td>@item.affiliation</td>
+                                <td>vantar</td>
+                            </tr>
+                        }
+                    }
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
