--- a/Pages/Shared/_footer.cshtml
+++ b/Pages/Shared/_footer.cshtml
@@ -2,18 +2,18 @@
     <div class="container">
         <div class="row align-self-center">
             <div class="col-xs-12 col-sm-4 col-md-4">
-                <h5>Conntact Us</h5>
+                <h5>Quick Links</h5>
                 <ul class="list-unstyled quick-links">
-                    <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Home</a></li>
-                    <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>About</a></li>
-                    <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Videos</a></li>
+                    <li><a href="/"><i class="fa fa-angle-double-right"></i>Home</a></li>
+                    <li><a href="/welcome_to_EABA"><i class="fa fa-angle-double-right"></i>About</a></li>
+                    <li><a href="/Event"><i class="fa fa-angle-double-right"></i>Events</a></li>
                 </ul>
             </div>
             <div class="col col-sm-4 col-md-4">
-                <h5>Quick links</h5>
+                <h5>Contact Us</h5>
                 <ul class="list-unstyled quick-links">
-                    <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Home</a></li>
-                    <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>About</a></li>
+                    <li><a href="mailto:secretary@europenaba.org"><i class="fa fa-angle-double-right"></i>Send Email</a></li>
+                    <li><a href="https://wego.here.com/directions/mix//European-Association-for-Behaviour-Analysis,-Wergelandsveien-27,-0130-Oslo:e-eyJuYW1lIjoiRXVyb3BlYW4gQXNzb2NpYXRpb24gZm9yIEJlaGF2aW91ciBBbmFseXNpcyIsImFkZHJlc3MiOiJXZXJnZWxhbmRzdmVpZW4gMjcsIE9zbG8sIE5vcndheSIsImxhdGl0dWRlIjo1OS45MjAxNywibG9uZ2l0dWRlIjoxMC43Mjg4OCwicHJvdmlkZXJOYW1lIjoiZmFjZWJvb2siLCJwcm92aWRlcklkIjoxNDQwNzMzMTg5NzQ3ODR9?map=59.92017,10.72888,15,normal&fb_locale=en_US"><i class="fa fa-angle-double-right"></i>Our Location</a></li>
                     <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
                 </ul>
             </div>
