--- a/Areas/Identity/Pages/Account/Admin/ManageUsers.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/ManageUsers.cshtml
@@ -2,7 +2,6 @@
 @model webApi.Areas.Identity.Pages.Account.Admin.ManageUsersModel
 @{
     ViewData["Title"] = "Index";
-    // ég er svo fokking gáfaður.
     // Til að nota eigið _Layout þarf að gefa því absolute path í Index.
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
@@ -14,13 +13,14 @@
         <hr />
         <div class="row">
             <div class="col-md-3">
-                <div class="list-group">                   
+                <div class="list-group">
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
-                    <a class="list-group-item list-group-item-action active"href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
+                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Grants/Index">Edit News</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">edit pdf files</a>
                 </div>
             </div>
             <div class="col-md-9">
