--- a/Areas/Identity/Pages/Account/Admin/admin_edit_pdf.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/admin_edit_pdf.cshtml
@@ -1,26 +1,32 @@
 ﻿@page
-@model webApi.Areas.Identity.Pages.Account.Admin.IndexModel
+@model webApi.Areas.Identity.Pages.Account.Admin.admin_edit_pdfModel
 @{
     ViewData["Title"] = "Index";
-    // Til að nota eigið _Layout þarf að gefa því absolute path í Index.
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
 <div class="container" id="containerLayout">
+
     <h2>Manage your Admin account</h2>
     <div>
-        <h4>Change your Admin settings</h4>
         <hr />
         <div class="row">
             <div class="col-md-3">
-                <div class="list-group">
+                <div class="list-group">                   
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
+                    <a class="list-group-item list-group-item-action"href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Grants/Index">Edit News</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
+                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/admin_edit_pdf">Elections</a>
                 </div>
+            </div>
+            <div class="col-md-9">
+
+                <h2>Edit pdf files</h2>
+                
             </div>
         </div>
     </div>
 </div>
+
