--- a/Areas/Identity/Pages/Account/Admin/Boardmember/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Boardmember/Create.cshtml
@@ -4,39 +4,56 @@
 @{
     ViewData["Title"] = "Create";
 }
+<div class="container" id="containerLayout">
 
-<h2>Create</h2>
-
-<h4>BoardMember</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="BoardMember.Name" class="control-label"></label>
-                <input asp-for="BoardMember.Name" class="form-control" />
-                <span asp-validation-for="BoardMember.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="BoardMember.BoardRole" class="control-label"></label>
-                <input asp-for="BoardMember.BoardRole" class="form-control" />
-                <span asp-validation-for="BoardMember.BoardRole" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                    <input type="file" name="files" multiple />
+    <h2>Manage your Admin account</h2>
+    <div>
+        <hr />
+        <div class="row">
+            <div class="col-md-3">
+                <div class="list-group">
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Grants/Index">Edit News</a>
+                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
                 </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
             </div>
-        </form>
+            <div class="col-md-9">
+                <div class="cont">                  
+                        <div>
+                            <h1>Create Boardmembers</h1>
+                        </div>               
+                    <div class="row">
+                       
+                            <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                <div class="form-group">
+                                    <label asp-for="BoardMember.Name" class="control-label"></label>
+                                    <input asp-for="BoardMember.Name" class="form-control" />
+                                    <span asp-validation-for="BoardMember.Name" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="BoardMember.BoardRole" class="control-label"></label>
+                                    <input asp-for="BoardMember.BoardRole" class="form-control" />
+                                    <span asp-validation-for="BoardMember.BoardRole" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <input type="file" name="files" multiple />
+                                </div>
+                                <div class="form-group">
+                                    <input type="submit" value="Create" class="btn btn-primary" />
+                                </div>
+                            </form>                   
+                    </div>
+                </div>
+                <div>
+                    <a class="btn btn-secondary"asp-page="Index">Back to List</a>
+                </div>              
+            </div>
+        </div>
     </div>
 </div>
-
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+                   
