--- a/Areas/Identity/Pages/Account/Admin/Events/Edit.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Events/Edit.cshtml
@@ -11,7 +11,6 @@
 
     <h2>Manage your Admin account</h2>
     <div>
-        <h4>Change your Admin settings</h4>
         <hr />
         <div class="row">
             <div class="col-md-3">
@@ -22,6 +21,7 @@
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Grants/Index">Edit News</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
                 </div>
             </div>
             <div class="col-md-9">
