--- a/Areas/Identity/Pages/Account/Admin/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/Index.cshtml
@@ -16,9 +16,11 @@
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Grants/Index">Edit News</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Edit pdf</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
                 </div>
             </div>
         </div>
