--- a/Areas/Identity/Pages/Account/Admin/News/Create.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/News/Create.cshtml
@@ -1,8 +1,9 @@
 ﻿@page
-@model webApi.Pages.Boardmember.CreateModel
+@model webApi.Pages.Grants.CreateModel
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
 <div class="container" id="containerLayout">
 
@@ -15,30 +16,35 @@
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
-                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/News/Index">Edit News</a>
-                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
+                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/News/Index">Edit News</a>
+                    <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
                 </div>
             </div>
             <div class="col-md-9">
-                <div class="cont">                  
+                <div class="cont">
+                    <div class="container">
                         <div>
-                            <h1>Create Boardmembers</h1>
-                        </div>               
+                            <h1>Create News</h1>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cart container">
                     <div class="row">
-                       
+                        <div class="col-md-12">
                             <form method="post" asp-controller="UploadFiles" enctype="multipart/form-data">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="form-group">
-                                    <label asp-for="BoardMember.Name" class="control-label"></label>
-                                    <input asp-for="BoardMember.Name" class="form-control" />
-                                    <span asp-validation-for="BoardMember.Name" class="text-danger"></span>
+                                    <label asp-for="Grant.Title" class="control-label"></label>
+                                    <input asp-for="Grant.Title" class="form-control" />
+                                    <span asp-validation-for="Grant.Title" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="BoardMember.BoardRole" class="control-label"></label>
-                                    <input asp-for="BoardMember.BoardRole" class="form-control" />
-                                    <span asp-validation-for="BoardMember.BoardRole" class="text-danger"></span>
+                                    <label asp-for="Grant.text" class="control-label"></label>
+                                    <input asp-for="Grant.text" class="form-control" />
+                                    <span asp-validation-for="Grant.text" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
                                     <input type="file" name="files" multiple />
@@ -46,14 +52,18 @@
                                 <div class="form-group">
                                     <input type="submit" value="Create" class="btn btn-primary" />
                                 </div>
-                            </form>                   
+                            </form>
+                        </div>
                     </div>
+
                 </div>
+
+
                 <div>
-                    <a class="btn btn-secondary"asp-page="Index">Back to List</a>
-                </div>              
+                    <a class="btn btn-secondary" asp-page="Index">Back to List</a>
+                </div>
             </div>
         </div>
     </div>
 </div>
-                   
+              
