--- a/Areas/Identity/Pages/Account/Admin/News/Delete.cshtml
+++ b/Areas/Identity/Pages/Account/Admin/News/Delete.cshtml
@@ -1,10 +1,11 @@
 ﻿@page
-@model webApi.Pages.Grants.DetailsModel
+@model webApi.Pages.Grants.DeleteModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
     Layout = "~/Areas/Identity/Pages/Account/Admin/_Layout.cshtml";
 }
+
 <div class="container" id="containerLayout">
 
     <h2>Manage your Admin account</h2>
@@ -16,7 +17,7 @@
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ChangePassword">Password</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/ManageUsers">Manage Users</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Events/Index">Edit Events</a>
-                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/Grants/Index">Edit News</a>
+                    <a class="list-group-item list-group-item-action active" href="/Identity/Account/Admin/News/Index">Edit News</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Boardmember/Index">Edit Boardmembers</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/Votes/Index">Elections</a>
                     <a class="list-group-item list-group-item-action" href="/Identity/Account/Admin/admin_edit_pdf">Edit pdf files</a>
@@ -26,29 +27,30 @@
                 <div class="cont">
                     <div class="container">
                         <div>
-                            <h1>Details</h1>
+                            <h1>Delete News</h1>
+                            <h3>Are you sure you want to delete this?</h3>
                         </div>
                     </div>
                 </div>
-
 
 
                 <div class="cart container">
                     <div class="card mb-3" style="width: 36rem;">
-                        <img class="card-img-top" src="~/images/grants/@Model.Grant.Image" alt="Card image cap">
+                        <img class="card-img-top" src="~/images/events/@Model.Grant.Image" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">@Model.Grant.Title</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                            <a asp-page="./Edit" asp-route-id="@Model.Grant.Id">Edit</a> |
+                            <form method="post">
+                                <input type="hidden" asp-for="Grant.Id" />
+                                <input type="submit" value="Delete" class="btn btn-primary" /> |
+                                <a class="btn btn-secondary" asp-page="./Index">Back to List</a>
+                            </form>
                         </div>
                     </div>
-                </div>
-
-                <div>
-                    <a class="btn btn-secondary"asp-page="./Index">Back to List</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
