Bætt við í register

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm center">
-                    <h1 style="color: #ffffff;">EABEA</h1>
+                    <h1 style="color: #ffffff;">EABA</h1>
                     <p style="color: #ffffff;">The European Association for Behaviour Analysis (EABA) is an international organisation that aims to promote behaviour analysis in Europe and to provide an international forum within Europe for the study and discussion of matters relevant to behavior analysis.</p>
                 </div>
                 <div class="col-sm r">
