Bætt við á register það sem var aukalega krafa

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -65,12 +65,12 @@
                 <span asp-validation-for="Input.address2" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.affiliation"></label>
+                <label asp-for="Input.affiliation">Affiliation *</label>
                 <input asp-for="Input.affiliation" class="form-control" />
                 <span asp-validation-for="Input.affiliation" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Input.interest"></label>
+                <label asp-for="Input.interest">Field of Interest *</label>
                 <input asp-for="Input.interest" class="form-control" />
                 <span asp-validation-for="Input.interest" class="text-danger"></span>
             </div>
