database modified and frontpage done

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -41,16 +41,19 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark navbar-full" id="myHeader" style="background-color: #222; border-color:#080808">
         <div class="container">
-            <div class="dropdown">
-                <a class="btn btn-secondary" asp-page="/" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    EABA
-                </a>
-            </div>
+           
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <div class="dropdown">
+                            <a class="btn btn-secondary" asp-page="/Index" role="button" id="dropdownMenuLink">
+                                EABA
+                            </a>
+                        </div>
+                    </li>
                     <li class="nav-item active">
                         <div class="dropdown">
                             <a class="btn btn-secondary" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -72,8 +75,20 @@
                             </a>
                         </div>
                     </li>
-                    <li class="nav-item active"><a class="nav-link" asp-page="/Event">Events</a></li>
-                    <li class="nav-item active"><a class="nav-link" asp-page="/News">News</a></li>
+                    <li class="nav-item active">
+                        <div class="dropdown">
+                            <a class="btn btn-secondary" asp-page="/Event" role="button" id="dropdownMenuLink">
+                                Events
+                            </a>
+                        </div>
+                    </li>
+                    <li class="nav-item active">
+                        <div class="dropdown">
+                            <a class="btn btn-secondary" asp-page="/News" role="button" id="dropdownMenuLink">
+                                News
+                            </a>
+                        </div>
+                    </li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
